added more styles

--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Footer/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Footer/index.sass
@@ -1,21 +1,13 @@
-
 .mainfooter
-
     display: flex
     padding: 5px
     position: fixed
     left: 0
     bottom: 0
     width: 100%
-    background-color:  white
-    color: black
-    text-align: center
+    background-color: #eae9e9
+    
 
-    a 
-        color: black
-        text-decoration: none
-        background-color: white
-        font-size: 16px
-        padding: 3%
-        margin: 5px auto
+    &__title
+        color: #394a6d
         text-align: center
