--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
@@ -3,8 +3,8 @@
   padding: 5%
   justify-content: space-between
   align-items: center
-  >div 
-    width:30%
+  // >div 
+  //   width:30%
     
 
 /* Navbar container */
@@ -105,10 +105,9 @@
 .title
   &__user
     font-size: 14px
-    // background: url('../style/img/user-icon.png') transparent no-repeat 0 0 
-    // min-width: 85%
-    // font-weight: bold
-    // text-align: left
-    // padding: 0 0 0 2rem
+   
   &__name
     font-size: 25px
+  
+.fa-user
+  margin: 5px 5px
