--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LeagueTable/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LeagueTable/index.sass
@@ -1,21 +1,27 @@
-.clasification
+.table   
+
+    background-color: #394a6d
+    width: 100vw
+    height: 100vh
     
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-    margin: auto
-    width: 50%
-    border: 1px solid  #45454d
-    padding: 5px
+    &__clasification
     
-    &__list
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        margin: auto
+        width: 50%
+        border: 1px solid  #45454d
+        padding: 5px
+    
+        &__list
        
-       
-        margin: 10%
-        background-color: #45454d
+            margin: 10%
         
-    &__table
-        background-color: #45454d
-        width: 40%
+            &__tables
+                background-color: rgba(0,0,0,0.4)
+                width: 100%
+            
+
         
     
