--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
@@ -1,12 +1,18 @@
 .league
 
-    width: 80%
-    margin: 10% auto
-    border: 1px solid white
+    background-color: #394a6d
+    height: 100vh
+    width: 100vw
+
+    &__content
+        width: 80%
+        margin: 10% auto
+        border: 1px solid white
+        background-color: rgba(0,0,0,0.4)
 
     &__name
         margin: 5%
 
-.league-title
-    text-align: center
+    &__title
+        text-align: center
    
