--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLineup/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLineup/index.sass
@@ -1,55 +1,8 @@
-// .container
-//     display: grid
-//     grid-template-columns: auto auto auto auto
-//     padding: 10px
-//     border-radius: 10px
-//     grid-gap: 25px 10px
-//     width: 100%
+.mylineup   
+    background-color: #394a6d
+    width: 100vw
 
-
-
-// .item
-
-//     background-color: #293462
-//     border: 1px solid #fff
-//     font-size: 20px
-//     text-align: center
-//     width: 75%
-
-    
-
-// .item0
-    
-//     margin: 0 auto
-//     grid-column-start: 1
-//     grid-column-end: 5
-   
-// .item9
-   
-//     margin: 0 auto
-//     grid-column-start: 1
-//     grid-column-end: 3
-
-// .item10
-
-    
-//     margin: 0 auto
-//     grid-column-start: 3
-//     grid-column-end: 5
-
-// button
-//     color: black
-//     background-color: white
-//     font-size: 16px
-//     display: block
-//     padding: 5px
-//     width: 30%
-//     margin: 10px auto
-//     text-align: center 
-
-    
 .item-players
     background-color: #394a6d
     width: 70%
-    border: 1px solid white
-    
+  
