--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerDetail/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerDetail/index.sass
@@ -1,3 +1,8 @@
+.detail
+      
+    background-color: #394a6d
+    width: 100vw
+    
 .player-detail
     display: flex
     flex-direction: column
@@ -7,20 +12,23 @@
   
     &__image
         justify-content: center
-        width: 85%
-        margin: 5% auto
+        width: 89%
+        margin: 0 auto
+        margin-top: 5%
         border: 1px solid white
 
     &__content
         display: flex
+        width: 85%
+        background-color: rgba(0,0,0,0.5)
         flex-direction: column
         border: 0.5px solid white
         padding: 0.5em
         display: flex
         justify-content: center
-        margin: 2% auto
+        margin: 0 auto
 
 p
     text-align: center
     color: white
-    font-size: 20px
+    font-size: 15px
