--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResult/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResult/index.sass
@@ -1,14 +1,14 @@
 .card-players
    
     margin: auto
-    padding: 5px
     width: 100%
+    border: 1px solid white
    
 
     p
         text-align: center
         color: white
-        font-size: 20px
+        font-size: 15px
 
     a 
         font-size: 1px   
@@ -17,7 +17,7 @@
         width: 90%
 
     &__content
-        border: 0.5px solid white
+        background-color: rgba(0,0,0,0.5)
         padding: 0.5em
         display: flex
         justify-content: center
