--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/TeamCreate/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/TeamCreate/index.sass
@@ -1,7 +1,13 @@
+.create-teams
+    background-color: #394a6d
+    width: 100vw
+    height: 100vh
+
+    
 .players-create
     background-color: #394a6d
-    width: 70%
-    margin: 0 5%
+    
+   
     
 li
     list-style: none
