--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/CreateLeagues/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/CreateLeagues/index.sass
@@ -1,13 +1,20 @@
-.form-create
+.create
+    background-color: #394a6d
+    width: 100vw
+    height: 100vh
+
+    &__content
+
+        &__form-create
     
-    text-align: center
+            text-align: center
     
 
-    &__inputs
-        display: flex
-        flex-direction: column
-        flex-wrap: nowrap
-  
+            &__inputs
+                display: flex
+                flex-direction: column
+                flex-wrap: nowrap
+    
 
 label
     font-size: 18px
@@ -16,10 +23,10 @@ input
     padding: 2%
     margin: 2%
 
-.create
-    width: 80%
-    margin: 10% auto
-    border: 1px solid white
-    &__title
-        margin-bottom: 0
+// .create
+//     width: 80%
+//     margin: 10% auto
+//     border: 1px solid white
+//     &__title
+//         margin-bottom: 0
   
