--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
@@ -1,25 +1,29 @@
-// .container
-//     width: 100vw
 
- .header
-     width: 98%
-     
-.links
-    display: flex
-    flex-direction: column
-    flex-wrap: nowrap
-    color: black
-    text-decoration: none
+.body-landing
+    background: url('./img/pitch.jpeg') 
+    height: 100vh
+    width: 100vw
+    background-size: cover 
     background-color: white
-    font-size: 14px
-    display: block
-    padding: 3%
-    width: 20%
-    margin: 5px auto
-    text-align: center
+   
 
-.landing
-    width: 80%
-    padding: 20px
-    margin: 20% auto
-    border: 1px solid white
+    &__content
+        width: 90%
+        padding: 20px
+        margin: 20% auto
+        
+
+    &__links
+        display: flex
+        flex-direction: column
+        flex-wrap: nowrap
+        color: black
+        text-decoration: none
+        background-color: white
+        font-size: 14px
+        display: block
+        padding: 3%
+        width: 20%
+        margin: 5px auto
+        text-align: center
+        border: 1px solid black
