--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupUpdate/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupUpdate/index.sass
@@ -1,3 +1,9 @@
+.lineupdate
+      
+    background-color: #394a6d
+    width: 100vw
+    
+
 .player-lineup
     display: flex
     flex-direction: column
@@ -7,18 +13,20 @@
   
     &__image
         justify-content: center
-        width: 70%
-        margin: 5% auto
+        width: 89%
+        margin: 0% auto
+        margin-top: 5% 
         border: 1px solid white
 
     &__content
         display: flex
+        width: 85%
         flex-direction: column
-        border: 0.5px solid white
+        background-color: rgba(0,0,0,0.5)
         padding: 0.5em
         display: flex
         justify-content: center
-        margin: 2% auto
+        margin: 0% auto
 
 p
     text-align: center
