--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Login/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Login/index.sass
@@ -1,9 +1,19 @@
+.login
+    background: url('./img/pitch-blur.jpeg') 
+    height: 100vh
+    width: 100vw
+    background-size: cover 
+    background-color: white
+
+    &__content
+        width: 80%
+        margin: 20% auto
+        border: 1px solid white
 
 .links
     display: flex
     flex-direction: column
     flex-wrap: nowrap
-    
     color: black
     text-decoration: none
     background-color: white
@@ -31,7 +41,3 @@ input
     padding: 2%
     margin: 2%
 
-.login
-    width: 80%
-    margin: 20% auto
-    border: 1px solid white
