--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyTeam/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyTeam/index.sass
@@ -1,10 +1,10 @@
-ul 
-    width: 100%
-
+.myteam   
+    background-color: #394a6d
+    width: 100vw
 
 .players
     background-color: #394a6d
     width: 70%
-    border: 1px solid white
+    
 
     
