--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
@@ -1,37 +1,30 @@
-.card-initial
-   
-    margin: 15%
-    width: 100%
-    
-  
-    p
-        text-align: center
-        color: white
-        font-size: 20px
+// .card-initial
+//     background-color: #394a6d
+//     width: 100vw
+//     height: 100vh
 
-    a 
-        font-size: 1px   
+.card-initial   
 
-    &__image
-        width: 90%
-        // &--img 
-        //     object-fit: cover
-        //     width: 100%
-        //     height: 100%
-
-    &__content
-        border: 0.5px solid white
-        width: 85%
+        margin: 15%
         padding: 0.5em
         display: flex
         justify-content: center
         flex-direction: column
-
-        &__name
-            padding-right: 0.5em
-        &__surname
-            padding-right: 0.5em
-        &__points    
-            padding-right: 0.5em
+        background-color: #394a6d
         
+    
+        &__image
+            width: 90%
+        &__info
+            &__name
+                padding-right: 0.5em
+            &__surname
+                padding-right: 0.5em
+            &__points    
+                padding-right: 0.5em
+        
+ 
 
+
+
+   
