--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Register/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Register/index.sass
@@ -1,4 +1,14 @@
+.register
+    background: url('./img/pitch-blur.jpeg') 
+    height: 100vh
+    width: 100vw
+    background-size: cover 
+    background-color: white
 
+    &__content
+        width: 80%
+        margin: 20% auto
+        border: 1px solid white
 .links
     display: flex
     flex-direction: column
@@ -32,7 +42,3 @@ input
     padding: 2%
     margin: 2%
 
-.register
-    width: 80%
-    margin: 20% auto
-    border: 1px solid white
