--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/UserProfile/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/UserProfile/index.sass
@@ -1,26 +1,26 @@
-.card
+.user-profile  
 
-    margin: 10% auto
-    padding: 5px
-    width: 80%
-   
+    background-color: #394a6d
+    width: 100vw
+    height: 100vh
 
-    p
-        text-align: center
-        color: white
-        font-size: 20px
-        padding: 5%
-   
-   
+    &__card
 
-    &__content
-        border: 0.5px solid white
-        padding: 0.5em
-        display: flex
-        justify-content: center
-        flex-direction: column
+        margin: 10% auto
+        padding: 5px
+        width: 80%
+   
+        &__content
+            border: 0.5px solid white
+            padding: 0.5em
+            display: flex
+            justify-content: center
+            flex-direction: column
+            
 
         &__user
             padding-right: 0.5em
         &__surname
             padding-right: 0.5em
+
+
