--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
@@ -52,7 +52,19 @@ table {
   border-spacing: 0;
 }
 
-.links {
+.body-landing {
+  background: url("./img/pitch.jpeg");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-color: white;
+}
+.body-landing__content {
+  width: 90%;
+  padding: 20px;
+  margin: 20% auto;
+}
+.body-landing__links {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -65,13 +77,7 @@ table {
   width: 20%;
   margin: 5px auto;
   text-align: center;
-}
-
-.landing {
-  width: 80%;
-  padding: 20px;
-  margin: 20% auto;
-  border: 1px solid white;
+  border: 1px solid black;
 }
 
 .feedback__text {
@@ -80,6 +86,20 @@ table {
   width: 80%;
   margin: 5% auto;
   padding: 5%;
+  border: 1px solid white;
+  font-size: 1rem;
+}
+
+.login {
+  background: url("./img/pitch-blur.jpeg");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-color: white;
+}
+.login__content {
+  width: 80%;
+  margin: 20% auto;
   border: 1px solid white;
 }
 
@@ -117,7 +137,14 @@ input {
   margin: 2%;
 }
 
-.login {
+.register {
+  background: url("./img/pitch-blur.jpeg");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-color: white;
+}
+.register__content {
   width: 80%;
   margin: 20% auto;
   border: 1px solid white;
@@ -157,29 +184,41 @@ input {
   margin: 2%;
 }
 
-.register {
-  width: 80%;
-  margin: 20% auto;
-  border: 1px solid white;
+.register-successful {
+  background: url("./img/pitch-blur.jpeg");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-color: white;
 }
 
 .league {
+  background-color: #394a6d;
+  height: 100vh;
+  width: 100vw;
+}
+.league__content {
   width: 80%;
   margin: 10% auto;
   border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 .league__name {
   margin: 5%;
 }
-
-.league-title {
+.league__title {
   text-align: center;
 }
 
-.form-create {
+.create {
+  background-color: #394a6d;
+  width: 100vw;
+  height: 100vh;
+}
+.create__content__form-create {
   text-align: center;
 }
-.form-create__inputs {
+.create__content__form-create__inputs {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -194,23 +233,11 @@ input {
   margin: 2%;
 }
 
-.create {
-  width: 80%;
-  margin: 10% auto;
-  border: 1px solid white;
-}
-.create__title {
-  margin-bottom: 0;
-}
-
 .header {
   display: flex;
   padding: 5%;
   justify-content: space-between;
   align-items: center;
-}
-.header > div {
-  width: 30%;
 }
 
 /* Navbar container */
@@ -311,64 +338,60 @@ input {
   font-size: 25px;
 }
 
-ul {
-  width: 100%;
+.fa-user {
+  margin: 5px 5px;
+}
+
+.myteam {
+  background-color: #394a6d;
+  width: 100vw;
 }
 
 .players {
   background-color: #394a6d;
   width: 70%;
-  border: 1px solid white;
+}
+
+.mylineup {
+  background-color: #394a6d;
+  width: 100vw;
 }
 
 .item-players {
   background-color: #394a6d;
   width: 70%;
-  border: 1px solid white;
 }
 
 .card-initial {
   margin: 15%;
-  width: 100%;
-}
-.card-initial p {
-  text-align: center;
-  color: white;
-  font-size: 20px;
-}
-.card-initial a {
-  font-size: 1px;
-}
-.card-initial__image {
-  width: 90%;
-}
-.card-initial__content {
-  border: 0.5px solid white;
-  width: 85%;
   padding: 0.5em;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  background-color: #394a6d;
 }
-.card-initial__content__name {
+.card-initial__image {
+  width: 90%;
+}
+.card-initial__info__name {
   padding-right: 0.5em;
 }
-.card-initial__content__surname {
+.card-initial__info__surname {
   padding-right: 0.5em;
 }
-.card-initial__content__points {
+.card-initial__info__points {
   padding-right: 0.5em;
 }
 
 .card-players {
   margin: auto;
-  padding: 5px;
   width: 100%;
+  border: 1px solid white;
 }
 .card-players p {
   text-align: center;
   color: white;
-  font-size: 20px;
+  font-size: 15px;
 }
 .card-players a {
   font-size: 1px;
@@ -377,7 +400,7 @@ ul {
   width: 90%;
 }
 .card-players__content {
-  border: 0.5px solid white;
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 0.5em;
   display: flex;
   justify-content: center;
@@ -390,6 +413,11 @@ ul {
   padding-right: 0.5em;
 }
 
+.detail {
+  background-color: #394a6d;
+  width: 100vw;
+}
+
 .player-detail {
   display: flex;
   flex-direction: column;
@@ -398,24 +426,27 @@ ul {
 }
 .player-detail__image {
   justify-content: center;
-  width: 85%;
-  margin: 5% auto;
+  width: 89%;
+  margin: 0 auto;
+  margin-top: 5%;
   border: 1px solid white;
 }
 .player-detail__content {
   display: flex;
+  width: 85%;
+  background-color: rgba(0, 0, 0, 0.5);
   flex-direction: column;
   border: 0.5px solid white;
   padding: 0.5em;
   display: flex;
   justify-content: center;
-  margin: 2% auto;
+  margin: 0 auto;
 }
 
 p {
   text-align: center;
   color: white;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .initial-header {
@@ -424,7 +455,12 @@ p {
   border: 1px solid white;
 }
 
-.clasification {
+.table {
+  background-color: #394a6d;
+  width: 100vw;
+  height: 100vh;
+}
+.table__clasification {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -433,48 +469,55 @@ p {
   border: 1px solid #45454d;
   padding: 5px;
 }
-.clasification__list {
+.table__clasification__list {
   margin: 10%;
-  background-color: #45454d;
 }
-.clasification__table {
-  background-color: #45454d;
-  width: 40%;
+.table__clasification__list__tables {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
 }
 
-.card {
+.user-profile {
+  background-color: #394a6d;
+  width: 100vw;
+  height: 100vh;
+}
+.user-profile__card {
   margin: 10% auto;
   padding: 5px;
   width: 80%;
 }
-.card p {
-  text-align: center;
-  color: white;
-  font-size: 20px;
-  padding: 5%;
-}
-.card__content {
+.user-profile__card__content {
   border: 0.5px solid white;
   padding: 0.5em;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
-.card__content__user {
+.user-profile__card__user {
   padding-right: 0.5em;
 }
-.card__content__surname {
+.user-profile__card__surname {
   padding-right: 0.5em;
+}
+
+.create-teams {
+  background-color: #394a6d;
+  width: 100vw;
+  height: 100vh;
 }
 
 .players-create {
   background-color: #394a6d;
-  width: 70%;
-  margin: 0 5%;
 }
 
 li {
   list-style: none;
+}
+
+.teamsleague {
+  background-color: #394a6d;
+  width: 100vw;
 }
 
 .item-players-lineup {
@@ -487,6 +530,11 @@ li {
   list-style: none;
 }
 
+.lineupdate {
+  background-color: #394a6d;
+  width: 100vw;
+}
+
 .player-lineup {
   display: flex;
   flex-direction: column;
@@ -495,18 +543,20 @@ li {
 }
 .player-lineup__image {
   justify-content: center;
-  width: 70%;
-  margin: 5% auto;
+  width: 89%;
+  margin: 0% auto;
+  margin-top: 5%;
   border: 1px solid white;
 }
 .player-lineup__content {
   display: flex;
+  width: 85%;
   flex-direction: column;
-  border: 0.5px solid white;
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 0.5em;
   display: flex;
   justify-content: center;
-  margin: 2% auto;
+  margin: 0% auto;
 }
 
 p {
@@ -515,8 +565,18 @@ p {
   font-size: 20px;
 }
 
-body {
-  background-color: #394a6d;
+.mainfooter {
+  display: flex;
+  padding: 5px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #eae9e9;
+}
+.mainfooter__title {
+  color: #394a6d;
+  text-align: center;
 }
 
 h1 {
@@ -538,7 +598,7 @@ h2 {
 a {
   color: black;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 1rem;
   display: block;
   padding: 3%;
   margin: 5px auto;
