--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -4,6 +4,7 @@
 @import ../components/Feedback
 @import ../components/Login
 @import ../components/Register
+@import ../components/RegisterSuccess
 @import ../components/MyLeagues
 @import ../components/CreateLeagues
 @import ../components/Header
@@ -16,12 +17,13 @@
 @import ../components/LeagueTable
 @import ../components/UserProfile
 @import ../components/TeamCreate
+@import ../components/TeamsLeague
 @import ../components/LineupCreate
 @import ../components/LineupUpdate
+@import ../components/Footer
 
     
-body 
-    background-color: #394a6d
+
 h1
     color: white
     font-size: 30px
@@ -39,12 +41,13 @@ h2
 a
     color: black
     text-decoration: none
-    font-size: 18px
+    font-size: 1rem
     display: block
     padding: 3%
     margin: 5px auto
     text-align: center
     font-family: 'Monda', sans-serif
+   
     
 p 
 
