add more styles

--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
@@ -103,9 +103,14 @@
   text-align: left
 
 .title
+
+  &__name
+    margin: 5%
+
   &__user
-    font-size: 14px
-   
+    
+    &--paragraph
+      font-size: 14px
   &__name
     font-size: 25px
   
