--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
@@ -10,9 +10,14 @@
         border: 1px solid white
         background-color: rgba(0,0,0,0.4)
 
-    &__name
-        margin: 5%
+        &__title
+            margin-top: 2%
 
-    &__title
-        text-align: center
+        &__name
+            margin: 5%
+            color: black
+
+        &__title
+            text-align: center
+            
    
