--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerDetail/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerDetail/index.sass
@@ -27,8 +27,13 @@
         display: flex
         justify-content: center
         margin: 0 auto
-
-p
-    text-align: center
-    color: white
-    font-size: 15px
+        &__name
+            font-size: 18px
+        &__position
+            font-size: 18px
+        &__points
+            font-size: 18px
+        &__goals
+            font-size: 18px
+        &__cost
+            font-size: 18px
