--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
@@ -1,23 +1,22 @@
-// .card-initial
-//     background-color: #394a6d
-//     width: 100vw
-//     height: 100vh
 
 .card-initial   
 
-        margin: 15%
         padding: 0.5em
         display: flex
         justify-content: center
         flex-direction: column
         background-color: #394a6d
         
+        
     
         &__image
-            width: 90%
+            width: 80%
+            margin: 10%
         &__info
+            background-color: rgba(0,0,0,0.5)
             &__name
                 padding-right: 0.5em
+                font-size: 18px
             &__surname
                 padding-right: 0.5em
             &__points    
