--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/TeamCreate/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/TeamCreate/index.sass
@@ -2,7 +2,18 @@
     background-color: #394a6d
     width: 100vw
     height: 100vh
+    
 
+    &__link
+        color: white
+        text-decoration: none
+        background-color: black
+        font-size: 18px
+        display: block
+        padding: 3%
+        width: 25%
+        margin: 5% auto
+        text-align: center
     
 .players-create
     background-color: #394a6d
@@ -11,3 +22,4 @@
     
 li
     list-style: none
+
