--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/UserProfile/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/UserProfile/index.sass
@@ -18,9 +18,13 @@
             flex-direction: column
             
 
-        &__user
-            padding-right: 0.5em
-        &__surname
-            padding-right: 0.5em
-
+            &__user
+                padding-right: 0.5em
+                font-size: 16px
+            &__surname
+                padding-right: 0.5em
+                font-size: 16px
+            &__email
+                padding-right: 0.5em
+                font-size: 16px
 
