--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
@@ -1,25 +1,42 @@
+// body
+    
+//     background: url('./img/pitch-blur.jpeg') 
+//     height: 100vh
+//     width: 100vw
+//     background-size: cover 
+//     background-color: white
 
-.body-landing
-    background: url('./img/pitch.jpeg') 
-    height: 100vh
-    width: 100vw
-    background-size: cover 
-    background-color: white
+// .body-landing
+//     background: url('./img/pitch.jpeg') 
+//     height: 100vh
+//     width: 100vw
+//     background-size: cover 
+//     background-color: white
    
+.body-landing
+    
 
     &__content
-        width: 90%
-        padding: 20px
+        width: 100%
         margin: 20% auto
         
+    &__image
+        
+        background-size: cover 
+        background-color: white
+        z-index: -1
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
 
     &__links
         display: flex
         flex-direction: column
         flex-wrap: nowrap
-        color: black
+        color: white
         text-decoration: none
-        background-color: white
+        background-color: black
         font-size: 14px
         display: block
         padding: 3%
