--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LeagueTable/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LeagueTable/index.sass
@@ -2,7 +2,7 @@
 
     background-color: #394a6d
     width: 100vw
-    height: 100vh
+    
     
     &__clasification
     
@@ -21,6 +21,10 @@
             &__tables
                 background-color: rgba(0,0,0,0.4)
                 width: 100%
+            &__team
+                font-size: 16px
+            &__points
+                font-size: 16px
             
 
         
