--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupCreate/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupCreate/index.sass
@@ -1,8 +1,26 @@
+.create-lineups
+
+    background-color: #394a6d
+    width: 100vw
+    height: 100vh
+
+    &__title
+        font-size: 18px
+    &__link
+        color: white
+        text-decoration: none
+        background-color: black
+        font-size: 18px
+        display: block
+        padding: 3%
+        width: 25%
+        margin: 5% auto
+
+    
 .item-players-lineup
 
     background-color: #394a6d
-    width: 75%
-    margin: 0 5%
+   
     
 li
     list-style: none
