--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Login/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Login/index.sass
@@ -1,14 +1,18 @@
 .login
-    background: url('./img/pitch-blur.jpeg') 
-    height: 100vh
-    width: 100vw
-    background-size: cover 
-    background-color: white
-
+  
     &__content
         width: 80%
         margin: 20% auto
         border: 1px solid white
+    &__image
+        
+        background-size: cover 
+        background-color: white
+        z-index: -1
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
 
 .links
     display: flex
@@ -26,7 +30,7 @@
 
 
 form
-    padding: 10%
+    
     text-align: center
 
     &__form--inputs
