--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Register/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Register/index.sass
@@ -1,20 +1,22 @@
 .register
-    background: url('./img/pitch-blur.jpeg') 
-    height: 100vh
-    width: 100vw
-    background-size: cover 
-    background-color: white
-
+    
     &__content
         width: 80%
         margin: 20% auto
         border: 1px solid white
+    &__image
+        
+        background-size: cover 
+        background-color: white
+        z-index: -1
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
 .links
     display: flex
     flex-direction: column
     flex-wrap: nowrap
-    
-
     color: black
     text-decoration: none
     background-color: white
@@ -27,7 +29,7 @@
 
 
 form
-    padding: 10%
+    
     text-align: center
 
     &__form-inputs
