--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/RegisterSuccess/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/RegisterSuccess/index.sass
@@ -1,6 +1,26 @@
 .register-successful
-    background: url('./img/pitch-blur.jpeg') 
-    height: 100vh
-    width: 100vw
-    background-size: cover 
-    background-color: white
+    
+    &__content
+        font-size: 18px
+        margin: 20%
+
+    &__image
+        
+        background-size: cover 
+        background-color: white
+        z-index: -1
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+
+
+    &__link
+        color: white
+        text-decoration: none
+        background-color: black
+        font-size: 14px
+        display: block
+        padding: 3%
+        width: 40%
+        margin: 5px auto
