--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -64,3 +64,8 @@ button
         background-color: white
         color: #D7D9DA
         font-weight: bold
+
+body 
+    background-color: #394a6d
+    height: 100vh
+    width: 100vw
