--- a/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.sass
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.sass
@@ -1,317 +1,10 @@
 @media only screen and (min-width: 320px) and (max-width: 767px)
   
-*
-  padding: 0
-  margin: 0
-  box-sizing: border-box
-
-.body
-  width: 100vw
-  min-height: 100vh 
-  font-family: 'Roboto', sans-serif
-  background-image: url('https://image.freepik.com/foto-gratis/fondo-oscuro-textura-pizarra_23-2148238443.jpg')
-  background-color: rgb(100,100,100)
-  
-  
-.nav
-  width: 100vw
-  background-color: #ececec
-  background-image: linear-gradient(to bottom, rgb(236, 236, 236) , rgb(238, 238, 238))
-  display: flex
-  padding: 1rem
-  align-content: center
-  align-items: center
-  overflow: hidden
-
-  &__h2
-    width: 48vw
-    margin-left: 0.5rem
-    text-align: left
-    color: rgb(100,100,100)
-    font-size: 1rem
-    text-decoration: none
-
-  &__a
-    float: rigth
-    font-size: 1rem
-    color: rgb(0,0,0)
-    text-align: center
-    padding: 1rem 1.1rem
-    text-decoration: none
-
-.dropdown
-  width: 48vw
-  overflow: hidden
-  display: flex
-  justify-content: flex-end
-  
-  .dropdown &__dropbtn
-    margin-right: 0.5rem
-    font-size: 1rem
-    border: none
-    outline: none
-    color: rgb(0,0,0)
-    background-color: inherit
-  
-  &__content
-    display: none
-    position: absolute
-    z-index: 1
-    background-color: rgba(255,255,255,.5)
-
-  &__button
-    float: none
-    color: rgb(0,0,0)
-    padding: 1rem 1.1rem
-    text-decoration: none
-    display: block
-    text-align: right
-
-  &__button:hover
-    background-color: rgb(100,100,100)
-
-.dropdown:hover .dropdown__content
-  display: block
-
-
-.main
-  width: 100vw
-  display: flex
-  flex-direction: column
-  padding: 1rem
-  justify-content: center
-  align-items: center
-
-  &__hello
-    width: 99vw
-    margin-left: 2rem
-    color: rgb(255,255,255)
-  
-  &__button
-    display: flex
-    align-items: center
-    justify-content: center
-    width: 40vw
-    height: 6vh
-    margin: 1rem auto
-    background-color: rgba(255,255,255,0.2)
-    box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-    border: 0px solid transparent
-    text-decoration: none
-    color: rgb(255,255,255)
-
-  &__h3
-    width: 100vw
-    margin: 1rem 0
-    color: rgb(255,255,255)
-    font-size: 1rem
-    text-align: center
-
-  &__button-week
-    width: 60vw
-    height: 10vh
-    margin: 1rem auto
-    padding: 1.5rem
-    background-color: rgba(255,255,255,0.2)
-    box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-    text-align: center
-    text-decoration: none
-    color: rgb(255,255,255)
-    align-self: center
-
-
-.examples
-  width: 94vw
-  margin: 1rem auto
-  background-color: rgba(255,255,255,0.2)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-
-  &__title
-    padding: 1rem
-    color: rgb(255,255,255)
-    font-size: 0.9rem
-    text-align: center
-
-  &__ul
-    list-style-type: none
-    text-align: center
-
-  &__li
-    width: 96%
-    padding: 0.4rem
-    margin: 0.8rem auto
-    font-size: 0.8em
-    align-self: center
-    text-align: center
-    background-color: rgba(255,255,255,1)
-
-  &__h4
-    margin:0.8rem auto 0.5rem auto
-    color: rgb(100,100,100)
-    font-size: 0.8rem
-  
-  &__photo
-    width: 86vw
-    margin: 0.5rem auto 
- 
-.form-section
-  width: 90vw
-  padding: 2rem
-  margin: auto
-  background-color: rgba(255, 255, 255, 0.2)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-  color: rgb(255,255,255)
-  text-align: center
-  justify-content: center
-  flex-direction: column
-  align-items: center
-
-.form
-  margin-top: 2rem
-  
-input 
-  width: 100%
-  height: 1.5rem
-  margin: 0.2rem 0 1rem 0
-  border: 0.05rem solid #b4b4b4
-  padding: 2px
-
-.go-back
-  text-decoration: none
-  color: rgb(255,255,255)
-  font-size: 0.7rem
-
-
-.reg-success__section
-  width: 90vw
-  margin-top: 2rem
-  padding: 2rem
-  margin: 2rem auto
-  color: rgb(255,255,255)
-  background-color: rgba(255, 255, 255, 0.5)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
-  text-align: center
-  justify-content: center
-  flex-direction: column
-  align-items: center
-
-.recipe
-  width: 94vw
-  margin: 1rem auto
-  background-color: rgba(255,255,255,0.2)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-
-  &__meal
-    font-size: 1rem
-    padding: 1rem
-    color: rgb(255,255,255)
-    text-align: center
-    background-color: rgba(255,255,255,0.2)
-
-  &__title
-    font-size: 0.9rem
-    padding: 1rem
-    color: rgb(255,255,255)
-    text-align: center
-
-  &__ul
-    list-style-type: none
-    text-align: center
-    padding: 0.5rem 0
-
-  &__li
-    width: 96%
-    padding: 0.1rem
-    margin: 0.1rem auto
-    font-size: 0.8em
-    align-self: center
-    text-align: center
-
-  &__h4
-    margin:0.8rem auto 0.5rem auto
-    color: rgb(100,100,100)
-    font-size: 0.8rem
-  
-  &__photo
-    width: 86vw
-    margin: 0.5rem auto 
-
-  &__text
-    margin: 0 0 1rem 0
-    font-size: 0.8em
-    padding: 1rem
-
-.main-create
-  width: 100vw
-  margin-top: 1rem
-  display: flex
-  flex-wrap: wrap
-  padding: 1rem
-  justify-content: center
-  text-align: center
-  color: white
-  
-  &__h3
-    width: 100vw
-    margin: 1rem auto
-    color: rgb(255,255,255)
-    font-size: 1rem
-
-.selector
-  width:49vw
-  background-color: rgba(255,255,255,.8)
-  margin: 0.5rem
-  border-radius: 0
-
-.user__button
-    width: 80vw
-    height: 6vh
-    margin: 1rem auto
-    padding: 0.6rem
-    background-color: rgba(255,255,255,0.2)
-    box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-    border: 0px solid transparent
-    text-align: center
-    text-decoration: none
-    color: rgb(255,255,255)
-
-// CURRENT WEEK
-
-.week
-  width: 90%
-  margin: 1rem auto
-  color: white
-  &__day 
-    width: 100%
-    padding: 0.6rem
-    display: flex
-    flex-wrap: wrap
-    background-color: rgba(255,255,255,0.2)
-    box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-  &__day-meal
-    width: 100%
-    margin: 0.5rem auto
-  &__day-img
-    width: 50%
-  &__day-title
-    width: 50%
-    padding: 1rem
-
-// USER PROFILE
-
-.user-panel
-  width: 90%
-  margin: 2rem auto
-  display: flex
-  flex-direction: column
-  padding: 1rem
-  justify-content: center
-  background-color: rgba(255,255,255,0.2)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.4)
-  color: rgb(255,255,255)
-  &__title
-    font-size: 1.7rem
-    text-align: center
-    margin-bottom: 1rem
-  &__info
-    font-size: 1.4rem
+@import ./style/compos
+@import ./style/form
+@import ./style/navbar
+@import ./style/recipe
+@import ./components/CreateMenu
+@import ./components/CurrentWeek
+@import ./components/Home
+@import ./components/UserProfile
