--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Login/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Login/index.sass
@@ -5,6 +5,7 @@
         font-family: Helvetica, Roboto, sans-serif
         font-size: 2rem
         text-align: center
+        margin-bottom: 2em
     &__form-item
         list-style: none
         margin: 1em
@@ -15,7 +16,7 @@
         background-color: black
         color: white
         text-align: center
-        margin-bottom: 3em
+        margin: 1em auto 3em auto
         border: none
         padding: .5em
     &__back-link
