finished mobile design, added ranking retrieving method and fixed all posts retrieving method

--- a/staff/juan-bovo/vltra/vltra-app/src/components/Footer/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Footer/style.sass
@@ -10,7 +10,7 @@
     text-align: right
     font-weight: bold
     color: white
-    background-color: rgba(113, 80, 147, 0.8)
+    background-color: rgb(113, 80, 147)
 
 @media (min-width: 48em)
     .footer
