--- a/staff/juan-bovo/vltra/vltra-app/src/components/Post/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Post/style.sass
@@ -2,3 +2,44 @@
 
 .post-detail
     clear: both
+    width: 90%
+    margin: 0 auto
+
+.post-detail__title
+    position: sticky
+    top: 0
+    z-index: 1
+    display: block
+    background-color: black
+    color: white
+    font-size: 1.3em
+    font-weight: bold
+    padding: 1rem
+
+.post-detail__container
+    position: relative
+    padding: 1rem 0
+    margin: 10% auto 100px
+    background-color: white
+    width: 90%
+
+.post-detail__view
+    padding: 30px
+
+.post-detail__content
+    font-size: 1em
+
+.post-detail__content-author
+    font-weight: bold
+
+.post-detail__content-date
+    font-style: italic
+
+.post-detail__on-back
+    position: absolute
+    right: 10%
+    padding: 10px
+    background-color: #935067
+    color: white
+    font-size: 1.3rem
+    text-decoration: none
