added some styles

--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -22,7 +22,8 @@
 @import ../components/LineupUpdate
 @import ../components/Footer
 
-    
+// *
+//     box-sizing: border-box  
 
 h1
     color: white
