--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
@@ -1,18 +1,4 @@
-// body
-    
-//     background: url('./img/pitch-blur.jpeg') 
-//     height: 100vh
-//     width: 100vw
-//     background-size: cover 
-//     background-color: white
 
-// .body-landing
-//     background: url('./img/pitch.jpeg') 
-//     height: 100vh
-//     width: 100vw
-//     background-size: cover 
-//     background-color: white
-   
 .body-landing
     
 
@@ -22,13 +8,14 @@
         
     &__image
         
-        background-size: cover 
+        //background-size: cover 
         background-color: white
         z-index: -1
         position: absolute
         top: 0
         left: 0
         width: 100%
+        height: 100%
 
     &__links
         display: flex
