--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
@@ -57,13 +57,13 @@ table {
   margin: 20% auto;
 }
 .body-landing__image {
-  background-size: cover;
   background-color: white;
   z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
 }
 .body-landing__links {
   display: flex;
